CCS & HTML changement

--- a/GIT.html
+++ b/GIT.html
@@ -16,32 +16,86 @@
 </p>
 <h2>Commande de GIT via le terminal</h2>
 <table>
+  <td style="text-align: left; color: #CC9900; font-weight: 800;">
+    CREATE
+  </td>
 <tr>
-  <th>git clone URL</th>
-<td>Récupère un dépôt à partir d'une adresse URL</td>
+  <th>git clone "URL"</th>
+<td>Clone an existing repository</td>
 </tr>
 <tr>
-<th> git add fichier</th>
-<td>Marque le fichier à consigner</td>
+<th> git init</th>
+<td>Create a new local repository
 </tr>
-<tr>
-<th>git add "nom_du_ficher"</th>
-<td>Marque tous les fichiers à consigner</td>
-</tr>
-<tr>
-<th>git commit -m "­Commentaire"</th>
-<td>Consigne les fichiers marqués dans le dépôt</td>
+<td style="text-align: left; color: #CC9900; font-weight: 800;">
+  LOCAL CHANGES
+</td>
 <tr>
 <th>git status</th>
-<td>Affiche l'état du dépôt local</td>
+<td>Changed files in your working directory</td>
 </tr>
 <tr>
-<th>git tag étiqu­ette</th>
-<td>Pose une étiqu­ette de version sur les fichiers</td>
+<th>git diff</th>
+<td>Changes to tracked files</td>
+<tr>
+<th>git add .</th>
+<td>Add all current changes in "files" to the next commit</td>
 </tr>
 <tr>
-<th>git push origin master</th>
-<td>Envoie les modifi­cations sur le dépôt principal</td>
-</tr></table>
+<th>git add -p "files"</th>
+<td>Add some changes in "files" to the next commit</td>
+</tr>
+<tr>
+<th>git commit -a</th>
+<td>Commit all local changes in tracked files</td>
+</tr>
+<tr>
+  <th>
+    git commit
+  </th>
+  <td>
+    Commit previously staged changes
+  </td>
+</tr>
+<tr>
+  <th>
+    git commit --amend
+  </th>
+  <td>
+    Change the last commit
+  </td>
+</tr>
+<td style="text-align: left; color: #CC9900; font-weight: 800;">
+  BRANCH
+</td>
+<tr>
+  <th>git branch -av</th>
+  <td>List all existing branches</td>
+</tr>
+<tr>
+  <th>git checkout "branch"</th>
+  <td>Switch head branch</td>
+</tr>
+<tr>
+  <th>git branch "new-branch"</th>
+  <td>Create a new branch based on your current HEAD</td>
+</tr>
+<tr>
+  <th>git checkout --track "remote/branch"</th>
+  <td>Create a new tracking branch based on a remote branch</td>
+</tr>
+<tr>
+  <th>git branch -d "ranch"</th>
+  <td>Delete a local branch</td>
+</tr>
+<tr>
+  <th>git tag "tag name"</th>
+  <td>Mark the current commit with a tag</td>
+</tr>
+<tr>
+  <th></th>
+  <td></td>
+</tr>
+</table>
   </body>
 </html>
