--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 <link rel="stylesheet" href="style.css" />
-    <title>CheatSheetGit MIGNON</title>
+    <title>CheatSheetGit Démoniaque</title>
   </head>
   <body>
 <h1>Bienvenue sur ce CheatSheetGit</h1>
