--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 <link rel="stylesheet" href="style.css" />
     <title>CheatSheetGit Démoniaque</title>
-  </head>
+  </head> <!--intro-->
   <body>
 <h1>Bienvenue sur ce CheatSheetGit</h1>
 <h2>Introduction</h2>
@@ -15,7 +15,7 @@
   Git est utilisé pour versionner son code.
 </p>
 <h2>Commande de GIT via le terminal</h2>
-<table>
+<table> <!--debut tableau-->
   <td style="text-align: left; color: #CC9900; font-weight: 800;">
     CREATE :
   </td>
@@ -129,6 +129,6 @@
   <th>git add "resolved-file"</th>
   <td>Use your editor to manually solve conflicts and mark file as resolved</td>
 </tr>
-</table>
+</table> <!--FIN TABLEAU-->
   </body>
 </html>
